--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "laracrafts/laravel-url-shortener",
+    "name": "hatchetaustralia/laravel-url-shortener",
     "description": "Powerful URL shortening tools in Laravel",
     "keywords": [
         "laravel",
@@ -21,28 +21,32 @@
         {
             "name": "László Görög",
             "email": "contact@nergal.xyz"
+        },
+        {
+            "name": "Matt Hare",
+            "email": "hello@hatchet.com.au"
         }
     ],
     "require": {
         "php": "^7.1",
-        "guzzlehttp/guzzle": "^6.2",
+        "guzzlehttp/guzzle": "^7.0.1",
         "guzzlehttp/promises": "^1.0",
-        "guzzlehttp/psr7": "^1.4",
-        "illuminate/support": "^5.1 || ^6.0 || ^7.0",
+        "guzzlehttp/psr7": "^2.1.0",
+        "illuminate/support": "^7.0 || ^8.0",
         "psr/http-message": "^1.0"
     },
     "require-dev": {
-        "illuminate/routing": "^5.1 || ^6.0 || ^7.0",
-        "phpunit/phpunit": "^7.0"
+        "illuminate/routing": "^7.0 || ^8.0",
+        "phpunit/phpunit": "^8.5 || ^9.0"
     },
     "autoload": {
         "psr-4": {
-            "LaraCrafts\\UrlShortener\\": "src/"
+            "Hatchet\\UrlShortener\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "LaraCrafts\\UrlShortener\\Tests\\": "tests/"
+            "Hatchet\\UrlShortener\\Tests\\": "tests/"
         }
     },
     "config": {
@@ -54,7 +58,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "\\LaraCrafts\\UrlShortener\\UrlShortenerServiceProvider"
+                "\\Hatchet\\UrlShortener\\UrlShortenerServiceProvider"
             ]
         }
     }
