--- a/composer.json
+++ b/composer.json
@@ -28,16 +28,16 @@
         }
     ],
     "require": {
-        "php": "^8.0",
+        "php": "^8.2",
         "guzzlehttp/guzzle": "^7.0.1",
         "guzzlehttp/promises": "^1.0",
         "guzzlehttp/psr7": "^2.1.0",
-        "illuminate/support": "^9.0",
+        "illuminate/support": "^10.0|^11.0",
         "psr/http-message": "^1.0"
     },
     "require-dev": {
-        "illuminate/routing": "^9.0",
-        "phpunit/phpunit": "^9.0"
+        "illuminate/routing": "^10.0|^11.0",
+        "phpunit/phpunit": "^11.0"
     },
     "autoload": {
         "psr-4": {
