--- a/composer.json
+++ b/composer.json
@@ -32,11 +32,11 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "guzzlehttp/promises": "^1.0",
         "guzzlehttp/psr7": "^2.1.0",
-        "illuminate/support": "^10.0|^11.0",
+        "illuminate/support": "^10.0|^11.0|^12.0",
         "psr/http-message": "^1.0"
     },
     "require-dev": {
-        "illuminate/routing": "^10.0|^11.0",
+        "illuminate/routing": "^10.0|^11.0|^12.0",
         "phpunit/phpunit": "^11.0"
     },
     "autoload": {
