--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     "require": {
         "php": "^8.2",
         "guzzlehttp/guzzle": "^7.0.1",
-        "guzzlehttp/promises": "^1.0",
+        "guzzlehttp/promises": "^1.0|^2.0",
         "guzzlehttp/psr7": "^2.1.0",
         "illuminate/support": "^10.0|^11.0|^12.0",
         "psr/http-message": "^1.0"
